--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "zf5_project",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
-    "font-awesome": "~4.1.0",
-    "flexslider": "*"
+    "font-awesome": "~4.1.0"
   }
 }
